# kindle_highlights

./: LICENSE  README.md  kindle-highlights.cabal  stack.yaml
src/: CommandOptions.hs  KindleHighlights.hs  Main.hs
test/: ParserSpec.hs
