name:                kindle-highlights
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jnduli/kindle-highlights#readme
license:             BSD3
license-file:        LICENSE
author:              John Nduli
maintainer:          yohanaizraeli@gmail.com
copyright:           2020 John Nduli
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     KindleHighlights, CommandOptions
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       optparse-applicative,
                       text,
                       containers,
                       time

--executable kindle-highlights
--  hs-source-dirs:      src
--  main-is:             Main.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5,
--                       parsec,
--                       optparse-applicative,
--                       text,
--                       containers,
--                       time


test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:       ParserSpec 
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       optparse-applicative,
                       text,
                       containers,
                       kindle-highlights,
                       time,
                       hspec >= 2.7,
                       hspec-discover >= 2.7
  default-language:    Haskell2010
  ghc-options: -Wall
  build-tool-depends: hspec-discover:hspec-discover == 2.*
